--- a/app/src/main/res/layout/activity_query_results.xml
+++ b/app/src/main/res/layout/activity_query_results.xml
@@ -1,43 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QueryResults">
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="149dp"
-        android:layout_height="25dp"
-        android:text="@string/app_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.671"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
-
-    <ImageView
-        android:id="@+id/resLogo"
-        android:layout_width="77dp"
-        android:layout_height="68dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.049"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="TODO" />
-
+    tools:context=".QueryResults"
+    android:orientation="vertical">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Results"
+    android:textSize="20sp"
+    android:textColor="#000"
+    android:id="@+id/textViewTitle"
+    android:layout_margin="5dp"
+    android:textStyle="bold">
+</TextView>
     <ListView
-        android:id="@+id/Qres"
-        android:layout_width="409dp"
-        android:layout_height="629dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/listviewQueryResults"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resLogo" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent" />
+</LinearLayout>
