--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/MovieDes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieList">
+    tools:context=".MovieListActivity">
 
     <TextView
         android:id="@+id/welcomeNote"
