--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,6 +118,16 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonSearch"
         app:layout_constraintVertical_bias="0.283" />
 
+    <Button
+        android:id="@+id/buttonLogOut"
+        android:layout_width="36dp"
+        android:layout_height="32dp"
+        android:background="@drawable/ic_baseline_power_settings_logout_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/helpScr"
         android:layout_width="wrap_content"
