--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:fontFamily="@font/spacegrotesk_light"
-        android:hint="Type Query Here"
+        android:hint="Search"
         android:inputType="textPersonName"
         android:textColor="#F6F6F6"
         android:textColorHint="#707070"
@@ -110,7 +110,7 @@
         android:layout_marginRight="84dp"
         android:background="#434345"
         android:fontFamily="@font/spacegrotesk_semibold"
-        android:text="SIGN IN"
+        android:text="LOG IN"
         android:textColor="@android:color/white"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
