--- a/app/src/main/res/layout-land/activity_query_results.xml
+++ b/app/src/main/res/layout-land/activity_query_results.xml
@@ -8,17 +8,37 @@
     android:background="#37383A"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewTitle"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#434345"
-        android:fontFamily="@font/spacegrotesk_medium"
-        android:padding="12dp"
-        android:text="Results"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:textStyle="bold"></TextView>
+        android:background="#434345">
+
+        <TextView
+            android:id="@+id/textViewTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/spacegrotesk_medium"
+            android:padding="12dp"
+            android:text="Results"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/backButton"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
+
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:background="#00FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/abc_vector_test" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ListView
         android:id="@+id/listviewQueryResults"
         android:layout_width="match_parent"
