--- a/app/src/main/res/layout/activity_query_results.xml
+++ b/app/src/main/res/layout/activity_query_results.xml
@@ -46,6 +46,5 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:descendantFocusability = "blocksDescendants"/>
+        app:layout_constraintStart_toStartOf="parent" />
 </LinearLayout>
